# tinydesk

rust_edited_crates/rdev-0.5.3/src/: lib.rs
rust_edited_crates/rdev-0.5.3/src/windows/: grab.rs  listen.rs  mod.rs
tinydesk/: Cargo.toml  Dioxus.toml
tinydesk/assets/: main.css
tinydesk/src/: backend.rs  main.rs
